# mission_finder

./: .gitignore  CMakeLists.txt  LICENSE  MissionFinder.def  NEXUS_IMGUI_NOTES.md  README.md  mission_finder_cache.json
scripts/: check-deps.sh
src/: ChatMessage.cpp  ChatMessage.h  Config.cpp  Config.h  EmbeddedMissionData.inc.in  IconData.inc  MissionData.cpp  MissionData.h  Shared.cpp  Shared.h  UI.cpp  UI.h  dllmain.cpp  entry.cpp
toolchains/: linux-mingw-w64.cmake
